init: start header basic layout

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -10,6 +10,20 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+  <main class="main">
+    <header class="header">
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li class="nav-list-item"><a href="/about" class="nav-list-link">About</a></li>
+          <li class="nav-list-item"><a href="/security" class="nav-list-link">Security</a></li>
+          <li class="nav-list-item"><a href="/blog" class="nav-list-link">Blog</a></li>
+          <li class="nav-list-item"><a href="/careers" class="nav-list-link">Careers</a></li>
+          <li class="nav-list-item"><a href="/support" class="nav-list-link">Support</a></li>
+          <li class="nav-list-item"><a href="/donate" class="nav-list-link">Donate</a></li>
+        </ul>
+      </nav>
+    </header>
+  </main>
+  <footer class="footer">foot</footer>
 </body>
 </html>
