inter: improve page header layout. Intermediate commit

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -7,21 +7,50 @@
   <title>Neutron Mail</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/fontawesome.min.css">
+  <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <main class="main">
     <header class="header">
-      <nav class="navigation">
-        <ul class="nav-list">
-          <li class="nav-list-item"><a href="/about" class="nav-list-link">About</a></li>
-          <li class="nav-list-item"><a href="/security" class="nav-list-link">Security</a></li>
-          <li class="nav-list-item"><a href="/blog" class="nav-list-link">Blog</a></li>
-          <li class="nav-list-item"><a href="/careers" class="nav-list-link">Careers</a></li>
-          <li class="nav-list-item"><a href="/support" class="nav-list-link">Support</a></li>
-          <li class="nav-list-item"><a href="/donate" class="nav-list-link">Donate</a></li>
+      <div class="header-row-1">
+        <div class="header-logo">
+          <a href="#" class="logo-link">neutron<span>Mail</span></a>
+        </div>
+        <div class="right-controls-wrapper">
+          <nav class="navigation">
+            <ul class="nav-list">
+              <li class="nav-list-item"><a href="/about" class="nav-list-link">About</a></li>
+              <li class="nav-list-item"><a href="/security" class="nav-list-link">Security</a></li>
+              <li class="nav-list-item"><a href="/blog" class="nav-list-link">Blog</a></li>
+              <li class="nav-list-item"><a href="/careers" class="nav-list-link">Careers</a></li>
+              <li class="nav-list-item"><a href="/support" class="nav-list-link">Support</a></li>
+              <li class="nav-list-item"><a href="/donate" class="nav-list-link">Donate</a></li>
+            </ul>
+          </nav>
+          <div class="login-buttons">
+            <button class="header-btn login-btn"><i class="fas fa-sign-in-alt"></i>Log in</button>
+            <button class="header-btn dark-blue-btn">Sign up</button>
+          </div>
+        </div>
+      </div>
+      <div class="lang-switcher">
+        <ul class="lang-switcher-list">
+          <li class="lang-switcher-list-item current">
+            <a href="" class="lang-switcher-link">English</a>
+          </li>
+          <li class="lang-switcher-list-item">
+            <a href="" class="lang-switcher-link">French</a>
+          </li>
+          <li class="lang-switcher-list-item">
+            <a href="" class="lang-switcher-link">Italian</a>
+          </li>
+          <li class="lang-switcher-list-item">
+            <a href="" class="lang-switcher-link">Polish</a>
+          </li>
         </ul>
-      </nav>
+      </div>
     </header>
   </main>
   <footer class="footer">foot</footer>
