feat: add footer privacy section layout

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -30,8 +30,8 @@
             </ul>
           </nav>
           <div class="login-buttons">
-            <button class="header-btn login-btn"><i class="fas fa-sign-in-alt"></i>Log in</button>
-            <button class="header-btn dark-blue-btn">Sign up</button>
+            <button class="btn login-btn"><i class="fas fa-sign-in-alt"></i>Log in</button>
+            <button class="btn dark-blue-btn login-btn-dark">Sign up</button>
           </div>
         </div>
       </div>
@@ -52,7 +52,17 @@
         </ul>
       </div>
     </header>
+
   </main>
-  <footer class="footer">foot</footer>
+  <footer class="footer">
+    <section class="footer__section footer__section--privacy">
+      <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
+      <p class="privacy__subtitle">Your support helps us to protect privacy world-wide.</p>
+      <div class="privacy__buttons">
+        <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href=""><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
+        <a class="btn-big light-blue-btn privacy__button" href=""><i class="fas fa-dollar-sign"></i> Donate</a> 
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
