feat: add security companies section layout

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -52,16 +52,48 @@
         </ul>
       </div>
     </header>
+    <div class="section-container">
+      <section class="section--privacy">
+        <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
+        <p class="privacy__subtitle">Your support helps us to protect privacy world-wide.</p>
+        <div class="privacy__buttons">
+          <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href=""><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
+          <a class="btn-big light-blue-btn privacy__button" href=""><i class="fas fa-dollar-sign"></i> Donate</a> 
+        </div>
+      </section>
+      <div class="section--security">
+        <h2 class="security__title">Those, who help us secure your privacy</h2>
+        <ul class="security__company-list">
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--1">security company logo 1</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--2">security company logo 2</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--3">security company logo 3</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--4">security company logo 4</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--5">security company logo 5</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--6">security company logo 6</span>
+          </li>
+          <li class="security__company-list-item">
+            <span class="security__company-logo security__company-logo--7">security company logo 7</span>
+          </li>
+        </ul>
+      </section>
+    </div>
+
 
   </main>
   <footer class="footer">
-    <section class="footer__section footer__section--privacy">
-      <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
-      <p class="privacy__subtitle">Your support helps us to protect privacy world-wide.</p>
-      <div class="privacy__buttons">
-        <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href=""><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
-        <a class="btn-big light-blue-btn privacy__button" href=""><i class="fas fa-dollar-sign"></i> Donate</a> 
-      </div>
+    <section class="footer__section">
+      sdf
     </section>
   </footer>
 </body>
