feat: add footer layout

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -92,9 +92,58 @@
 
   </main>
   <footer class="footer">
-    <section class="footer__section">
-      sdf
-    </section>
+    <div class="footer_row-1">
+      <div class="contacts">
+        <div class="contacts__item">General: <a href="mailto:contact@neutronmail.ch" class="contacts__link">contact@neutronmail.ch</a></div>
+        <div class="contacts__item">Media: <a href="mailto:media@neutronmail.ch" class="contacts__link">media@neutronmail.ch</a></div>
+        <div class="contacts__item">Security: <a href="mailto:security@neutronmail.ch" class="contacts__link">security@neutronmail.ch</a></div><br/>
+        <div class="contacts__item">For support inquiries, please visit<br/><a href="neutronmail.com/support" target="_blank" class="contacts__link">neutronmail.com/support</a></div>
+      </div>
+      <ul class="site-map">
+        <li class="site-map__item site-map__item--company">
+          <span class="site-map__list-title">Company</span>
+          <ul class="site-map__list">
+            <li class="site-map__list-item"><a href="" class="site-map__link">Blog</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Team</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Careers</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Support</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Donate</a></li>
+          </ul>
+        </li>
+        <li class="site-map__item site-map__item--legal">
+          <span class="site-map__list-title">Legal</span>
+          <ul class="site-map__list">
+            <li class="site-map__list-item"><a href="" class="site-map__link">Imprint</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Privacy Policy</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Terms & Conditions</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Transparency Report</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Report Abuse</a></li>
+          </ul>
+        </li>
+        <li class="site-map__item site-map__item--mail">
+          <span class="site-map__list-title">NeutronMail</span>
+          <ul class="site-map__list">
+            <li class="site-map__list-item"><a href="" class="site-map__link">Pricing</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Security</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Shop</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Press/Media Kit</a></li>
+            <li class="site-map__list-item"><a href="" class="site-map__link">Onion Site</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="footer_row-2">
+      <ul class="socials__list">
+        <li class="socials__list-item"><a href="https://www.facebook.com/" target="_blank" class="socials__link">Facebook</a></li>
+        <li class="socials__list-item"><a href="https://twitter.com/" target="_blank" class="socials__link">Twitter</a></li>
+        <li class="socials__list-item"><a href="https://uk.wikipedia.org/wiki/Google%2B" target="_blank" class="socials__link">Google +</a></li>
+        <li class="socials__list-item"><a href="https://stackoverflow.com/" target="_blank" class="socials__link">Feedback Forum</a></li>
+        <li class="socials__list-item"><a href="https://www.reddit.com/" target="_blank" class="socials__link">Reddit</a></li>
+      </ul>
+      <div class="copyright">
+        © 2017-2019 Neutron Technologies AG. All Rights Reserved.
+      </div>
+    </div>
   </footer>
 </body>
 </html>
