--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -52,13 +52,32 @@
         </ul>
       </div>
     </header>
+    <section class="intro">
+      <h1 class="intro__header">
+        Secure Email Communication
+      </h1>
+      <p class="intro__subheader">Based in <span class="intro__subheader--red">Somewhere</span></p>
+      <div class="intro__buttons">
+        <div class="create-button-wrapper">
+          <a href="/" target="_blank" class="intro__button btn-big dark-blue-btn">Create account</a>
+        </div>
+        <a href="https://itunes.apple.com/ua/genre/ios/id36?mt=8" target="_blank" class="intro__button intro__button--round"><i class="fab fa-apple"></i></a>
+        <a href="https://play.google.com/store" target="_blank" class="intro__button intro__button--round"><i class="fab fa-google-play"></i></a>
+        <img src="/assets/image/shadow.png" alt="shadow" class="btn-shadow">
+      </div>
+      <ul class="intro__socials-list">
+        <li class="intro__socials-list-item"><a target="_blank" href="https://uk.wikipedia.org/wiki/Google%2B" class="intro__socials-link"><i class="fab fa-google-plus-square"></i></a></li>
+        <li class="intro__socials-list-item"><a target="_blank" href="https://www.facebook.com/" class="intro__socials-link"><i class="fab fa-facebook-square"></i></a></li>
+        <li class="intro__socials-list-item"><a target="_blank" href="https://twitter.com/" class="intro__socials-link"><i class="fab fa-twitter-square"></i></a></li>
+      </ul>
+    </section>
     <div class="section-container">
       <section class="section--privacy">
         <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
         <p class="privacy__subtitle">Your support helps us to protect privacy world-wide.</p>
         <div class="privacy__buttons">
-          <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href=""><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
-          <a class="btn-big light-blue-btn privacy__button" href=""><i class="fas fa-dollar-sign"></i> Donate</a> 
+          <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href="/" target="_blank"><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
+          <a class="btn-big light-blue-btn privacy__button" href="/" target="_blank"><i class="fas fa-dollar-sign"></i> Donate</a> 
         </div>
       </section>
       <div class="section--security">
@@ -88,8 +107,6 @@
         </ul>
       </section>
     </div>
-
-
   </main>
   <footer class="footer">
     <div class="footer_row-1">
