feat: add layout of physical scurity section

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -71,6 +71,33 @@
         <li class="intro__socials-list-item"><a target="_blank" href="https://twitter.com/" class="intro__socials-link"><i class="fab fa-twitter-square"></i></a></li>
       </ul>
     </section>
+    <section class="infrastructure">
+      <div class="infrastructure__row infrastructure__row--1">
+        <div class="infrastructure__security infrastructure__security--privacy">
+          <div class="infrastructure__security-image infrastructure__security-image--privacy"></div>
+          <h3 class="infrastructure__security-title">Swiss Privacy</h3>
+          <p class="infrastructure__security-subtitle">Data Security and Neutrality</p>
+          <div class="infrastructure__security-text">NeutronMail is incorporated in Somewhere and all our servers are located in Switzerland. This means all user data is protected by strict Swiss privacy laws.</div>
+        </div>
+        <div class="infrastructure__security infrastructure__security--encryption">
+          <div class="infrastructure__security-image infrastructure__security-image--encryption"></div>
+          <h3 class="infrastructure__security-title">Double Encryption</h3>
+          <p class="infrastructure__security-subtitle">Automatic Email Security</p>
+          <div class="infrastructure__security-text">All emails are secured automatically with end-to-end encryption. This means even we cannot decrypt and read your emails. As a result, your encrypted emails cannot be shared with third parties.</div>
+        </div>
+        <div class="infrastructure__security infrastructure__security--email">
+          <div class="infrastructure__security-image infrastructure__security-image--email"></div>
+          <h3 class="infrastructure__security-title">Anonymous Email</h3>
+          <p class="infrastructure__security-subtitle">Protect Your Privacy</p>
+          <div class="infrastructure__security-text">No personal information is required to create your secure email account. By default, we do not keep any IP logs which can be linked to your anonymous email account. Your privacy comes first.</div>
+        </div>
+      </div>
+      <div class="infrastructure__row infrastructure__row--2">
+        <h2 class="infrastructure__title">Physical Security</h2>
+        <p class="infrastructure__subtitle">NeutronMail's infrastructure resides in Europe's <span>most secure</span><br/>datacenter, underneath 1000 meters of solid rock.</p>
+        <div class="infrastructure__block">Learn more about our security features</div>
+      </div>
+    </section>
     <div class="section-container">
       <section class="section--privacy">
         <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
@@ -80,7 +107,7 @@
           <a class="btn-big light-blue-btn privacy__button" href="/" target="_blank"><i class="fas fa-dollar-sign"></i> Donate</a> 
         </div>
       </section>
-      <div class="section--security">
+      <section class="section--security">
         <h2 class="security__title">Those, who help us secure your privacy</h2>
         <ul class="security__company-list">
           <li class="security__company-list-item">
