feat: add layout for device security section

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -98,6 +98,61 @@
         <div class="infrastructure__block">Learn more about our security features</div>
       </div>
     </section>
+    <section class="devices">
+      <ul class="devices__companies-list">
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--1">device company logo image 1</div>
+        </li>
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--2">device company logo image 2</div>
+        </li>
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--3">device company logo image 3</div>
+        </li>
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--4">device company logo image 4</div>
+        </li>
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--5">device company logo image 5</div>
+        </li>
+        <li class="devices__companies-list-item">
+          <div class="devices__company-logo devices__company-logo--6">device company logo image 6</div>
+        </li>
+      </ul>
+      <div class="devices__content">
+        <div class="devices__quote">
+          A new email service being developed by a group from MIT and CERN promises to bring secure,
+          encrypted email to the masses and keep sensitive information away from prying eyes.
+          <div class="devices__quote-author">
+            — Boston Herald
+          </div>
+          <ul class="devices__quote-switcher-list">
+            <li class="devices__quote-switcher-list-item">
+              <button class="devices__quote-switcher-item active"></button>
+            </li>
+            <li class="devices__quote-switcher-list-item">
+              <button class="devices__quote-switcher-item"></button>
+            </li>
+            <li class="devices__quote-switcher-list-item">
+              <button class="devices__quote-switcher-item"></button>
+            </li>
+          </ul>
+        </div>
+        <div class="devices__main">
+          <h2 class="devices__main-title">Any device, anywhere</h2>  
+          <p class="devices__main-text">The NeutronMail inbox is optimized for productivity. Each detail within our secure email service is optimized to help you better read, organize, and send email.</p>
+          <div class="devices__main-links">
+            <a href="https://itunes.apple.com/ua/genre/ios/id36?mt=8" target="_blank" class="devices__main-link">
+              <img src="assets/image/app_store.jpg" alt="App store" class="devices__main-store">
+            </a>
+            <a href="https://play.google.com/store" target="_blank" class="devices__main-link">
+              <img src="assets/image/google_play.jpg" alt="Google play" class="devices__main-store">
+            </a>
+          </div>
+        </div>
+        <img src="/assets/image/devices.png" alt="Devices" class="devices_main-image">
+      </div>
+    </section>
     <div class="section-container">
       <section class="section--privacy">
         <h2 class="privacy__title">Privacy is a fundamental human right.</h2>
