refactor: improve layout for better feat with pixel perfect

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -159,7 +159,7 @@
         <p class="privacy__subtitle">Your support helps us to protect privacy world-wide.</p>
         <div class="privacy__buttons">
           <a class="btn-big dark-blue-btn privacy__button privacy__button--mr" href="/" target="_blank"><i class="fas fa-cloud-upload-alt"></i> Upgrade to Paid Plan</a>
-          <a class="btn-big light-blue-btn privacy__button" href="/" target="_blank"><i class="fas fa-dollar-sign"></i> Donate</a> 
+          <a class="btn-big light-blue-btn privacy__button privacy__button--right" href="/" target="_blank"><i class="fas fa-dollar-sign"></i> Donate</a> 
         </div>
       </section>
       <section class="section--security">
@@ -195,7 +195,7 @@
       <div class="contacts">
         <div class="contacts__item">General: <a href="mailto:contact@neutronmail.ch" class="contacts__link">contact@neutronmail.ch</a></div>
         <div class="contacts__item">Media: <a href="mailto:media@neutronmail.ch" class="contacts__link">media@neutronmail.ch</a></div>
-        <div class="contacts__item">Security: <a href="mailto:security@neutronmail.ch" class="contacts__link">security@neutronmail.ch</a></div><br/>
+        <div class="contacts__item">Security: <a href="mailto:security@neutronmail.ch" class="contacts__link">security@neutronmail.ch</a></div>
         <div class="contacts__item">For support inquiries, please visit<br/><a href="neutronmail.com/support" target="_blank" class="contacts__link">neutronmail.com/support</a></div>
       </div>
       <ul class="site-map">
