improve: add responsive style for resolution 480-768px

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -20,6 +20,8 @@
         </div>
         <div class="right-controls-wrapper">
           <nav class="navigation">
+            <input type="checkbox" id="nav-burger-switcher" name="nav-burger-switcher" class="nav-burger-switcher">
+            <label class="nav-burger-switcher-label" for="nav-burger-switcher"></label>
             <ul class="nav-list">
               <li class="nav-list-item"><a href="/about" class="nav-list-link">About</a></li>
               <li class="nav-list-item"><a href="/security" class="nav-list-link">Security</a></li>
