improve: add responsive style for resolution below 480px

--- a/NeutronMail/index.html
+++ b/NeutronMail/index.html
@@ -33,7 +33,7 @@
           </nav>
           <div class="login-buttons">
             <button class="btn login-btn"><i class="fas fa-sign-in-alt"></i>Log in</button>
-            <button class="btn dark-blue-btn login-btn-dark">Sign up</button>
+            <button class="btn dark-blue-btn login-btn-dark"><i class="sign-in-btn-icon fas fa-user-plus"></i>Sign up</button>
           </div>
         </div>
       </div>
