--- a/CodeJam-dom_Palette/index.html
+++ b/CodeJam-dom_Palette/index.html
@@ -11,7 +11,7 @@
   <script defer src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script defer src="./node_modules/popper.js/dist/popper.min.js" type="module"></script>
   <script defer src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script defer src="./js/script.js"></script>
+  <script defer src="./js/script.js" type="module"></script>
 </head>
 <body>
   <header class="header shadow d-flex align-items-center">
@@ -24,6 +24,38 @@
     <h1 class="header__title">CodeJam - Pallete</h1>
     <button class="menu__collapse"><span>toggle navigation visibility</span></button>
   </header>
-  <main class="main"></main>
+  <main class="main">
+    <div class="pallet">
+      <div class="pallet__tools_wrapper">
+        <div class="pallet__tools pallet__tools--tools shadow">
+          <div class="pallet__color_tools pallet__tools_block">
+
+          </div>
+          <div class="pallet__transform_tools pallet__tools_block"></div>
+        </div>
+      </div>
+      <div class="pallet__tools_wrapper">
+        <div class="pallet__tools pallet__tools--colors shadow">
+          <div class="pallet__colors_last pallet__tools_block"></div>
+          <div class="pallet__colors_fixed pallet__tools_block"></div>
+        </div>
+      </div>
+    </div>
+    <div class="canvas__wrapper">
+      <div class="canvas">
+        <div class="canvas__blocks">
+          <div class="canvas__block canvas__block--1"></div>
+          <div class="canvas__block canvas__block--2"></div>
+          <div class="canvas__block canvas__block--3"></div>
+          <div class="canvas__block canvas__block--4"></div>
+          <div class="canvas__block canvas__block--5"></div>
+          <div class="canvas__block canvas__block--6"></div>
+          <div class="canvas__block canvas__block--7"></div>
+          <div class="canvas__block canvas__block--8"></div>
+          <div class="canvas__block canvas__block--9"></div>  
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
