feat: render pallet from config.js file

--- a/CodeJam-dom_Palette/index.html
+++ b/CodeJam-dom_Palette/index.html
@@ -28,9 +28,7 @@
     <div class="pallet">
       <div class="pallet__tools_wrapper">
         <div class="pallet__tools pallet__tools--tools shadow">
-          <div class="pallet__color_tools pallet__tools_block">
-
-          </div>
+          <div class="pallet__color_tools pallet__tools_block"></div>
           <div class="pallet__transform_tools pallet__tools_block"></div>
         </div>
       </div>
