--- a/palette/index.html
+++ b/palette/index.html
@@ -28,29 +28,37 @@
     <div class="pallet">
       <div class="pallet__tools_wrapper">
         <div class="pallet__tools pallet__tools--tools shadow">
-          <div class="pallet__color_tools pallet__tools_block"></div>
-          <div class="pallet__transform_tools pallet__tools_block"></div>
+          <div class="pallet__color_tools pallet__tools_block">
+            <div class="dynamic noselect"></div>
+          </div>
+          <div class="pallet__transform_tools pallet__tools_block">
+            <div class="dynamic noselect"></div>
+          </div>
         </div>
       </div>
       <div class="pallet__tools_wrapper">
         <div class="pallet__tools pallet__tools--colors shadow">
-          <div class="pallet__colors_last pallet__tools_block"></div>
-          <div class="pallet__colors_fixed pallet__tools_block"></div>
+          <div class="pallet__colors_last pallet__tools_block">
+            <div class="dynamic noselect"></div>
+          </div>
+          <div class="pallet__colors_fixed pallet__tools_block">
+            <div class="dynamic noselect"></div>
+          </div>
         </div>
       </div>
     </div>
     <div class="canvas__wrapper">
       <div class="canvas">
         <div class="canvas__blocks">
-          <div class="canvas__block canvas__block--1"></div>
-          <div class="canvas__block canvas__block--2"></div>
-          <div class="canvas__block canvas__block--3"></div>
-          <div class="canvas__block canvas__block--4"></div>
-          <div class="canvas__block canvas__block--5"></div>
-          <div class="canvas__block canvas__block--6"></div>
-          <div class="canvas__block canvas__block--7"></div>
-          <div class="canvas__block canvas__block--8"></div>
-          <div class="canvas__block canvas__block--9"></div>  
+          <div class="canvas__block canvas__block--1" data-element-id="1"></div>
+          <div class="canvas__block canvas__block--2" data-element-id="2"></div>
+          <div class="canvas__block canvas__block--3" data-element-id="3"></div>
+          <div class="canvas__block canvas__block--4" data-element-id="4"></div>
+          <div class="canvas__block canvas__block--5" data-element-id="5"></div>
+          <div class="canvas__block canvas__block--6" data-element-id="6"></div>
+          <div class="canvas__block canvas__block--7" data-element-id="7"></div>
+          <div class="canvas__block canvas__block--8" data-element-id="8"></div>
+          <div class="canvas__block canvas__block--9" data-element-id="9"></div>  
         </div>
       </div>
     </div>
