feat: bind toolbox mode change on hot buttons press

--- a/palette/index.html
+++ b/palette/index.html
@@ -21,7 +21,7 @@
     </label>
     <nav class="navigation">
     </nav>
-    <h1 class="header__title">CodeJam - Pallete</h1>
+    <h1 class="header__title">CodeJam - Palette</h1>
     <button class="menu__collapse"><span>toggle navigation visibility</span></button>
   </header>
   <main class="main">
