improve: use clicked pixel color inside main block to set current color within color picker mode

--- a/palette/index.html
+++ b/palette/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <script defer src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
   <script defer src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script defer src="./node_modules/popper.js/dist/popper.min.js" type="module"></script>
   <script defer src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
