feat: add possibility to select custom colors with input[type="color"]

--- a/palette/index.html
+++ b/palette/index.html
@@ -44,6 +44,12 @@
           </div>
           <div class="pallet__colors_fixed pallet__tools_block">
             <div class="dynamic noselect"></div>
+            <div class="pallet__tools_item" data-color-hex="#C4C4C4">
+              <label for="colorPicker" class="pallet__tools_item_label">
+                <input id="colorPicker" class="pallet__colors_item_pic pallet__colors_item_pic--custom" type="color"></input>
+                <span class="pallet__tools_item_title">Custom</span>
+              </label>
+            </div>
           </div>
         </div>
       </div>
