--- a/palette/index.html
+++ b/palette/index.html
@@ -4,18 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CodeJam-dom Palette</title>
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <title>CodeJam DOM Palette</title>
   <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
-  <script defer src="./node_modules/jquery/dist/jquery.min.js"></script>
-  <script defer src="./node_modules/popper.js/dist/popper.min.js" type="module"></script>
-  <script defer src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script defer src="./js/script.js" type="module"></script>
 </head>
 <body>
-  <header class="header shadow d-flex align-items-center">
+  <header class="header shadow align-items-center">
     <input type="checkbox" name="navigation__collapse" class="navigation__collapse hidden" id="navigation__collapse">
     <label for="navigation__collapse" class="navigation__collapse_label">
       <span class="navigation__collapse_label_text">toggle navigation visibility</span>
