--- a/palette/index.html
+++ b/palette/index.html
@@ -54,31 +54,31 @@
       <div class="canvas">
         <div class="canvas__blocks">
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--1" data-element-id="1"></div>
+            <div class="canvas__block canvas__block--1" data-element-id="1" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--2" data-element-id="2"></div>
+            <div class="canvas__block canvas__block--2" data-element-id="2" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--3" data-element-id="3"></div>
+            <div class="canvas__block canvas__block--3" data-element-id="3" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--4" data-element-id="4"></div>
+            <div class="canvas__block canvas__block--4" data-element-id="4" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--5" data-element-id="5"></div>
+            <div class="canvas__block canvas__block--5" data-element-id="5" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--6" data-element-id="6"></div>
+            <div class="canvas__block canvas__block--6" data-element-id="6" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--7" data-element-id="7"></div>
+            <div class="canvas__block canvas__block--7" data-element-id="7" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--8" data-element-id="8"></div>
+            <div class="canvas__block canvas__block--8" data-element-id="8" draggable="true"></div>
           </div>
           <div class="canvas__block_wrapper">
-            <div class="canvas__block canvas__block--9" data-element-id="9"></div>  
+            <div class="canvas__block canvas__block--9" data-element-id="9" draggable="true"></div>
           </div>
         </div>
       </div>
