--- a/animation-player/src/index.html
+++ b/animation-player/src/index.html
@@ -1,9 +1,13 @@
 <html>
   <head>
-    <title>Angular App</title>
+    <title>Piskel animation</title>
     <base href="/">
   </head>
   <body>
-  <my-app>loading</my-app>
+  <my-app>
+    <div style="font-size: 1.5rem; text-align: center; padding-top: 1rem;">
+      Loading...
+    </div>
+  </my-app>
   </body>
 </html>
